--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "gulp",
+    "watch": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Akinori ABE",
@@ -14,11 +15,13 @@
     "bootstrap.native": "^2.0.10",
     "bs-platform": "^1.7.4",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.4.1",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-pleeease": "^2.0.2",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
+    "gulp-webpack": "^1.5.0",
     "pug": "^2.0.0-rc.2",
     "sass": "^0.5.0"
   }
